--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -242,17 +242,23 @@
 
     <hr class="m-0">
 
-    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="interests">
+    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="contact">
       <div class="w-100">
-        <h2 class="mb-5">Interests</h2>
-        <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
-        <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
+        <h2 class="mb-5">Contact</h2>
+        <p class="mb-0">To report bugs, make feature requests, or express your appreciation, please contact or connect with me at:</p>
+
+        <ul class="contact">
+          <li><a href="mailto:j_johnson21@mail.fhsu.edu">E-mail</a></li>
+          <li><a href="https://www.linkedin.com/in/jerrad-johnson-7b84a1190/">LinkedIn</a></li>
+          <li><a href="https://www.facebook.com/profile.php?id=100008794832926">Facebook</a></li>
+        </ul>
+        <p class="mb-0">If you enjoyed my timer, please consider donating your Baby Roshans or other in-game items. Link to my <a href="https://steamcommunity.com/profiles/76561198010854512/">Steam Profile</a>. </p>
       </div>
     </section>
 
     <hr class="m-0">
 
-    <section class="p-3 p-lg-5 d-flex align-items-center" id="awards">
+    <section class="p-3 p-lg-5 d-flex align-items-center" id="credits">
       <div class="w-100">
         <h2 class="mb-5">Credits</h2>
         <ul class="fa-ul mb-0">
@@ -260,7 +266,7 @@
             DOTA icon made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/"             title="Flaticon">www.flaticon.com</a></div>
           </li>
         </ul>
-      </div>
+      </div> <!-- TODO add spacing -->
     </section>
 
   </div>
